--- a/index.html
+++ b/index.html
@@ -1,30 +1,87 @@
 <!DOCTYPE html>
-<style>
-    body {
-        background-color: aliceblue;
-    }
-
-    h1 {
-        font-size: large;
-        font-family: 'Courier New', Courier, monospace;
-        color: rgb(22, 22, 22);
-    }
-</style>
 <html>
-    <title>HelloWorld</title>
-    <body>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <center><h1><b>Hello World</b></h1></center>
-        <br>
-        <br>
-        <center><h1><b>This is</b></h1></center>
-        <br>
-        <br>
-        <center><h1><b>Jonaz's first website ever.</b></h1></center>
-    </body>
+<head>
+<style>
+
+body {
+ background-color: #0d141f;
+  animation-name: color;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+div {
+  z-index: -1px;
+  width: 200px;
+  height: 100px;
+  rotate: -5deg;
+  background-color: black;
+  animation-name: rotate;
+  animation-duration: 1s;
+  animation-iteration-count: infinite;
+}
+
+h1 {
+  z-index: 1px;
+  rotate: -6deg;
+  font-family: arial;
+  color: white;
+  font-size: 26px;
+  animation-name: rotate2;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes rotate {
+  50% {rotate: 5deg;}
+  100% {rotate: -5deg;}
+}
+
+@keyframes rotate2 {
+  25% {rotate: 6deg;   font-size: 25px;}
+  50% {rotate: -6deg;   font-size: 26px;}
+  75% {rotate: 6deg;   font-size: 25px;}
+  100% {rotate: -6deg;   font-size: 26px;}
+}
+
+@keyframes color {
+  25% {{background-color: #0d141f;}
+  50% {background-color:  #141d2b;}
+  75% {background-color: #0d141f;}
+  100% {background-color:  #141d2b;}
+}
+
+</style>
+</head>
+<body>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<center><div><center>
+<br>
+
+<h1>Coming Soon!</h1>
+</center></div></center>
+</body>
 </html>
