Form Testing Update

--- a/index.html
+++ b/index.html
@@ -20,6 +20,22 @@
 <br>
 <br>
 <br>
+<!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://formspree.io/f/moqznzwp"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
 <br>
 <br>
 <br>
