--- a/index.html
+++ b/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ZetroGames | Coming Soon!</title>
+  <title>ZetroGames </title>
+  <link rel="icon" type="image/x-icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -32,7 +35,6 @@
 <br>
 <center><div><center>
 <br>
-
 <h1>Coming Soon!</h1>
 </center></div></center>
 </body>
