--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ZetroGames </title>
+  <title>ZetroGames - Redirect</title>
   <link rel="icon" type="image/x-icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
