--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         gtag('js', new Date());
         gtag('config', 'G-1WFFSX1C3S');
         </script>
-        <title>ZetroGames - Better Home</title>
+        <title>ZetroGames - Home</title>
         <link rel="icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="home.css">
