--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
      <center><div class="topdiv1">
         <article id="updates"><b>Updates</b></article>
         <br>
-        <article id="Blue">Account Creation</article>
+        <article id="Blue">Fixed Menu bug</article>
         <br>
-        <article id="Red">Content Submission</article>
+        <article id="Red">Mobile Uploading</article>
         <br>
-        <article id="Yellow">ZetroPlus+</article>
+        <article id="Yellow">Animation Playback</article>
         <br>
-        <article id="Purple">^Zags</article>
+        <article id="Purple">More ^Zags</article>
      </div></center>
     </body>
 </html>
