--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@
      <div class="topdiv2">
         <article id="updates"><b>New Users</b></article>
         <br>
-        <article id="Red">amperpaper</article>
+        <article id="Red">wBlink</article>
         <br>
-        <article id="Yellow">S.T.R.I.K.E.</article>
+        <article id="Yellow">TimrBomb</article>
         <br>
-        <article id="Purple">trenticles the first</article>
+        <article id="Purple">FigureMiiOut</article>
         <br>
-        <article id="Blue">Nuke</article>
+        <article id="Blue">PageA</article>
      </div>
 
      <div class="topdiv3">
