--- a/404.html
+++ b/404.html
@@ -18,6 +18,6 @@
         <article>art made by wwoa1</article>
 <center><h1>Whoops!</h1></center>
 <center><p>the part of zetro you wanted is offline!</p></center>
-<a href="https://zetrogames.com/home"><img src="https://i.ibb.co/QdCgXBW/robert-sad-error404.png" alt="robert-sad-error404" border="0"></a>
+<a href="https://zetrogames.com"><img src="https://i.ibb.co/QdCgXBW/robert-sad-error404.png" alt="robert-sad-error404" border="0"></a>
 </body>
 </html>
