--- a/index.html
+++ b/index.html
@@ -15,10 +15,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-    <div class="top">
+        <div class="top">
         <img class="z-logo" src="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png" height="50px" width="50px" alt="zetrogames" border="0">
-
-      <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a></div></center>
+      <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a>   <a href="https://zetrogames.com/store"><button class="store" id="topbutton1">Store</button></a></div></center></div></center>
       </div>
       
 
@@ -42,9 +41,9 @@
     <div class="topdiv1">
         <article id="updates"><b>Updates</b></article>
         <br>
-        <article id="Blue">Account Creation</article>
+        <article id="Blue">Store</article>
         <br>
-        <article id="Red">Content Submission</article>
+        <article id="Red">ZetroTokens</article>
         <br>
         <article id="Yellow">ZetroPlus+</article>
         <br>
