--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
      <div class="topdiv2">
         <article id="updates"><b>New Users</b></article>
         <br>
-        <article id="Red">wBlink</article>
+        <article id="Red">Blink</article>
         <br>
         <article id="Yellow">TimrBomb</article>
         <br>
