--- a/accounts/wwoa1.html
+++ b/accounts/wwoa1.html
@@ -8,7 +8,7 @@
         gtag('js', new Date());
         gtag('config', 'G-1WFFSX1C3S');
         </script>
-        <title>ZetroGames - wwoa1</title>
+        <title>ZetroGames - Jonaz98</title>
         <link rel="icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="accounts.css">
@@ -17,7 +17,7 @@
     <body>
         <div id="pb" class="top_banner">
             <br>
-            <h1 id="p">wwoa1</h1>
+            <h1 id="p">Jonaz98</h1>
             <article>July 26 2023</article>
         </div>
         <br>
