--- a/404.html
+++ b/404.html
@@ -19,5 +19,6 @@
 <center><h1>Whoops!</h1></center>
 <center><p>the part of zetro you wanted is offline!</p></center>
 <a href="https://zetrogames.com"><img src="https://i.ibb.co/QdCgXBW/robert-sad-error404.png" alt="robert-sad-error404" border="0"></a>
+        <script src="version2.js"></script>
 </body>
 </html>
