--- a/buy.html
+++ b/buy.html
@@ -54,5 +54,6 @@
           <br>
           <center><article>If you can't afford the item you will be emailed</article></center>
           </form>
+        <script src="version2.js"></script>
     </body>
 </html>
