--- a/join.html
+++ b/join.html
@@ -50,5 +50,6 @@
   <br>
   <center><a href="https://zetrogames.com/thanks"><button class="submit" type="submit">Create</button></a></center>
     </form> 
+        <script src="version2.js"></script>
     </body>
     </html>
