--- a/zap.html
+++ b/zap.html
@@ -37,5 +37,6 @@
   <br>
   <center><button class="submit" type="submit">zap</button></center>
 </form>
+        <script src="version2.js"></script>
     </body>
     </html>
