--- a/index.html
+++ b/index.html
@@ -75,6 +75,33 @@
      </div>
 </div>
 </center>
+        <br>
+        <br>
+        <br>
+        <center><h1 id="find">Featured Content</h1></center>
+        <br>
+        <br>
+        <br>
+        <a href="https://zetrogames.com/content/images/001" ><div id="one" class="image">
+            <div class="upper-info"><h1 id="title">My imgflip</h1><h1 id="zag">^Memes</h1><h1 id="tag">#Images</h1></div>
+        </div></a>
+        <br>
+        <br>
+        <br>
+        <a href="" ><div class="text">
+            <div class="upper-info"><h1 id="title">Brand new 1.3 update</h1><h1 id="zag">^Updates</h1><h1 id="tag">#Text</h1></div>
+            <center><pre>Introducing the brand new featured content page!
+            </pre></center>
+        </div></a>
+        <br>
+        <br>
+        <br> 
+        <a href="https://zetrogames.com/content/videos/001" ><div id="two" class="image">
+            <div class="upper-info"><h1 id="title">B.F.D.I crew funny moments</h1><h1 id="zag">^Animations</h1><h1 id="tag">#Art</h1></div>
+        </div></a>
+        <br>
+        <br>
+        <br>
         <script src="version2.js"></script>
     </body>
 </html>
