--- a/join.html
+++ b/join.html
@@ -44,6 +44,12 @@
     <center><p>It's recomended you enter a Email so if you forget your Release Key you can change it.</p></center>
     <br>
     <br>
+    <label>
+      <center><h2>Promo Code</h2></center>
+      <center><input name="Promotional" id="PROMO_CODE"></input></center>
+      <center><p>This is an optional field in the case of a sponsor ship or ad campaign.</p></center>
+    <br>
+    <br>
     <center><h2>Do you accept all of Zetro's TOS?</h2></center>
     <center><p>By pressing the submit button you are accountable for what you have upload.</p></center>
   </label>
