--- a/index.html
+++ b/index.html
@@ -80,28 +80,42 @@
         <br>
         <center><h1 id="find">Featured Content</h1></center>
         <br>
+        <div id="fi" class="filter"><button class="btn-filter" id="A-btn">Text</button> <button class="btn-filter"  id="B-btn">Videos</button> <button class="btn-filter"  id="C-btn">Games</button> <button class="btn-filter" id="D-btn">Images</button> <button class="btn-filter" onclick="activatezag()" id="more-btns">More</button>
         <br>
         <br>
-        <a href="https://zetrogames.com/content/images/001" ><div id="one" class="image">
+        <p id="extrasG">Zags</p>
+        <pre id="extras"><a href="https://zetrogames.com/zags/action">Action</a>, <a href="https://zetrogames.com/zags/horror">Horror</a>, <a href="https://zetrogames.com/zags/adventure">Adventure</a>, <a href="https://zetrogames.com/zags/animations">Animations</a>, <a href="https://zetrogames.com/zags/fnaf">Fnaf</a>, 
+        <a href="https://zetrogames.com/zags/undertale">Undertale</a>, <a href="https://zetrogames.com/zags/fnf">Fnf</a>, <a href="https://zetrogames.com/zags/action">Memes</a>, <a href="https://zetrogames.com/zags/shooter">Shooter</a>, <a href="https://zetrogames.com/zags/vr">VR</a>, </pre>
+        </div>
+        <br>
+        <center><p id="none-found">None Found</p></center>
+        <br>
+        <br>
+        <br>
+        <div class="wrapperSec">
+
+        <a href="https://zetrogames.com/content/images/001" ><div id="images" style="background-image: url(https://i.ibb.co/37CXkwF/7twcr0.jpg)" class="image">
             <div class="upper-info"><h1 id="title">My imgflip</h1><h1 id="zag">^Memes</h1><h1 id="tag">#Images</h1></div>
         </div></a>
-        <br>
-        <br>
-        <br>
-        <a href="" ><div class="text">
+
+        <a href="" ><div id="texts" class="text">
             <div class="upper-info"><h1 id="title">Brand new 1.3 update</h1><h1 id="zag">^Updates</h1><h1 id="tag">#Text</h1></div>
             <center><pre>Introducing the brand new featured content page!
             </pre></center>
         </div></a>
-        <br>
-        <br>
-        <br> 
-        <a href="https://zetrogames.com/content/videos/001" ><div id="two" class="image">
+
+        <a href="https://zetrogames.com/content/videos/001" ><div style="background-image: url(https://i.ibb.co/2Fr0T9k/image.png)" id="videos" class="image">
             <div class="upper-info"><h1 id="title">B.F.D.I crew funny moments</h1><h1 id="zag">^Animations</h1><h1 id="tag">#Art</h1></div>
         </div></a>
+
+        <a href="https://zetrogames.com/content/images/001" ><div id="games" style="background-image: url(https://i.ibb.co/Kh6k783/download.png)" class="image">
+            <div class="upper-info"><h1 id="title">Physics Playground</h1><h1 id="zag">^Action</h1><h1 id="tag">#Games</h1></div>
+        </div></a>
+          
+        </div>
         <br>
         <br>
         <br>
-        <script src="version2.js"></script>
+        <script src="top_posts.js"></script>
     </body>
 </html>
