--- a/500.html
+++ b/500.html
@@ -24,6 +24,6 @@ img {
         <br>
         <br>
         <br>
-      <center><img src="https://i.ibb.co/xYGkXgb/zetrogames-error-500.png" alt="zetrogames-error-500" border="0"></center>
+      <center><img src="500.png" alt="zetrogames-error-500" border="0"></center>
     </body>
 </html>
