--- a/buy.html
+++ b/buy.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div class="top">
-            <img class="z-logo" src="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png" height="50px" width="50px" alt="zetrogames" border="0">
+            <img class="z-logo" src="zglogo.png" height="50px" width="50px" alt="zetrogames" border="0">
           <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a>   <a href="https://zetrogames.com/store"><button class="store" id="topbutton1">Store</button></a></div></center>
           </div>
           <br>
