--- a/join.html
+++ b/join.html
@@ -9,7 +9,7 @@
         gtag('config', 'G-1WFFSX1C3S');
         </script>
         <title>ZetroGames - Join</title>
-        <link rel="icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
+        <link rel="icon" src="zglogo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="joinstyles.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
