--- a/500.html
+++ b/500.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <title>ZetroGames - Server Downtime</title>
-        <link rel="icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
+        <link rel="icon" src="zglogo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="error500.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
