--- a/store.html
+++ b/store.html
@@ -9,7 +9,7 @@
       gtag('config', 'G-1WFFSX1C3S');
       </script>
         <title>ZetroGames - Store</title>
-        <link rel="icon" href="https://i.ibb.co/bbkY4Xz/zetrogames-logo.png">
+        <link rel="icon" href="zglogo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="store.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
