--- a/upload.html
+++ b/upload.html
@@ -9,7 +9,7 @@
         gtag('config', 'G-1WFFSX1C3S');
         </script>
         <title>ZetroGames - Upload</title>
-        <link rel="icon" src="zglogo.png">
+        <link rel="icon" href="zglogo.png">
         <meta charset="UTF-8">
         <link rel="stylesheet" href="upload.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
