--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
-        <div class="top">
-        <img class="z-logo" src="zglogo.png" height="50px" width="50px" alt="zetrogames" border="0">
-      <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a>   <a href="https://zetrogames.com/store"><button class="store" id="topbutton1">Store</button></a></div></center></div></center>
+     <div class="top">
+        <img class="z-logo" src="https://zetrogames.com/zglogo.png" height="50px" width="50px" alt="zetrogames" border="0">
+      <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a>   <a href="https://zetrogames.com/store"><button class="store" id="topbutton1">Store</button></a>  <a href="https://zetrogames.com/rally"><button class="rlybtn" id="topbutton1">Rally</button></a>  <a href="https://zetrogames.com/top1"><button class="topbtn" id="topbutton1">Top</button></a></center></div></center>
       </div>
-      
+
 
      <br>
      <br>
