--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" href="home.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     </head>
     <body>
         <div id="StoreUpdateMenu">
@@ -167,15 +170,12 @@
         <img class="z-logo" src="https://zetrogames.com/zglogo.png" height="50px" width="50px" alt="zetrogames" border="0">
       <center><div class="sigjj"><a href="https://zetrogames.com/join"><button class="joinbtn" id="topbutton1">Join</button></a>   <a href="https://zetrogames.com/upload"><button class="crtbtn" id="topbutton1">Create</button></a>  <a href="https://patreon.com/ZetroGames"><button class="imgbtn" id="topbutton1">ZetroPlus+</button></a>   <a href="https://zetrogames.com/store"><button class="store" id="topbutton1">Store</button></a>  <a href="https://zetrogames.com/rally"><button class="rlybtn" id="topbutton1">Rally</button></a>  <a href="https://zetrogames.com/top1"><button class="topbtn" id="topbutton1">Top</button></a></center></div></center>
       </div>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
-     <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <div class="bigbanner"></div>
      <center><h2>Welcome to ZetroGames</h2></center>
 
      <center><p class="bottom">The Better Content Hosting Website</p></center>
@@ -256,7 +256,11 @@
         <a href="https://zetrogames.com/content/images/001" ><div id="games" style="background-image: url(https://i.ibb.co/Kh6k783/download.png)" class="image">
             <div class="upper-info"><h1 id="title">Physics Playground</h1><h1 id="zag">^Action</h1><h1 id="tag">#Games</h1></div>
         </div></a>
-          
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
         </div>
         <script src="https://zetrogames.com/top_posts.js"></script>
         <script src="https://zetrogames.com/link.js"></script>
