Update and rename 500.html to Index.html
Shutting Down ZetroGames for major updates until UNK

--- a/Index.html
+++ b/Index.html
@@ -18,6 +18,12 @@ img {
     height: 500px;
 }
 
+p {
+  font-family: Arial;
+  color: white;
+  size: 15;
+}
+
     </style>
     <body>
         <br>
@@ -25,5 +31,9 @@ img {
         <br>
         <br>
       <center><img src="500.png" alt="zetrogames-error-500" border="0"></center>
+                <br>
+        <br>
+        <center><p>Website Downtime - June 13th to UNK</p></center>
+        <center><p>Note: ZetroGames is undergoing a massive rebranding and is switching website hosting.</p></center>
     </body>
 </html>
