--- a/404.html
+++ b/404.html
@@ -1,24 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <script async src="https://www.googletagmanager.com/gtag/js?id=G-1WFFSX1C3S"></script>
-        <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-        gtag('config', 'G-1WFFSX1C3S');
-        </script>
-        <title>ZetroGames - 404</title>
+        <title>ZetroGames - Server Downtime</title>
         <link rel="icon" href="zglogo.png">
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="404.css">
+        <link rel="stylesheet" href="error500.css">
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <style>
+        body {
+    background: rgb(29, 29, 29);
+}
+
+img {
+    margin-top: auto;
+    margin: auto;
+    height: 500px;
+}
+
+p {
+  font-family: Arial;
+  color: white;
+  size: 15;
+}
+
+    </style>
     <body>
-        <article>art made by wwoa1</article>
-<center><h1>Whoops!</h1></center>
-<center><p>the part of zetro you wanted is offline!</p></center>
-<a href="https://zetrogames.com"><img src="404.png" alt="robert-sad-error404" border="0"></a>
-        <script src="version2.js"></script>
-</body>
+        <br>
+        <br>
+        <br>
+        <br>
+      <center><img src="500.png" alt="zetrogames-error-500" border="0"></center>
+                <br>
+        <br>
+        <center><p>Website Downtime - June 13th to UNK</p></center>
+        <center><p>Note: ZetroGames is undergoing a massive rebranding and is switching website hosting.</p></center>
+    </body>
 </html>
