--- a/Index.html
+++ b/Index.html
@@ -1,39 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>ZetroGames - Server Downtime</title>
-        <link rel="icon" href="zglogo.png">
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="error500.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <style>
-        body {
-    background: rgb(29, 29, 29);
-}
-
-img {
-    margin-top: auto;
-    margin: auto;
-    height: 500px;
-}
-
-p {
-  font-family: Arial;
-  color: white;
-  size: 15;
-}
-
-    </style>
-    <body>
-        <br>
-        <br>
-        <br>
-        <br>
-      <center><img src="500.png" alt="zetrogames-error-500" border="0"></center>
-                <br>
-        <br>
-        <center><p>Website Downtime - June 13th to UNK</p></center>
-        <center><p>Note: ZetroGames is undergoing a massive rebranding and is switching website hosting.</p></center>
-    </body>
+<html>
+<head>
+<style>
+body {background-color: black;}
+h1 {color: dodgerblue; font-family: Arial; font-size: 20px;}
+p {color: white; font-family: Arial; font-size: 16px;}
+.redirectnotice {background-color: black; border-size: 5px; border-color: dodgerblue; color: dodgerblue; padding: 5px; font-size: 20px;}
+</style>
+<title>Redirect Notice</title>
+</head>
+<body>
+<h1>[zetrogames.com] has been moved to a Google Sites to avoid the DODEA domain ban.</h1>
+<br>
+<hr>
+<br>
+<p>Note: We are trying to submit a claim to unban the domain from DODEA's current web blocker [LightSpeed]. Hopefully we will have this educational website back up and running on our normal servers soon. I admit it is my fault for naming this website as such and wrongfully tripping the LightSpeed blocker. - @Jhub</p>
+<br>
+<br>
+<p>For now feel free to check out the new site!</p>
+<a href="https://sites.google.com/student.dodea.edu/zetrogames-for-sites/home"><button class="redirectnotice">Redirect to Google Sites</button></a>
+</body>
 </html>
